# spotterbase

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  mypy.ini  notes.txt  pyproject.toml  requirements.txt  setup.py
doc/: requirements.txt
doc/source/: anno_format.rst  annotations.rst  api-doc.rst  arxiv_plugin.rst  cmdtools.rst  conf.py  config.rst  contribute.rst  convert.rst  corpora.rst  dnm.rst  dnm_nlp.rst  getting_started.rst  index.rst  preprocessing.rst  rdf.rst  rdf_intro.rst  spotter_dev.rst  utils.rst
spotterbase/: __init__.py  config_loader.py  dnm_example.py  experiment.py  sb_vocab.py  test.py  utils.py
spotterbase/anno_core/: annotation.py  annotation_creator.py  record_class_resolver.py  sb.py  selector.py  tag_body.py  target.py
spotterbase/anno_extra/: declarations.py  record_class_resolver.py  sbx.py
spotterbase/annotations/: annotation.py  annotation_creator.py  body.py  concepts.py  conversion_base_classes.py  dom_range.py  offset_converter.py  records.py  selector.py  selector_converter.py  serialization_abc.py  tag_body.py  target.py  utils.py
spotterbase/concept_graphs/: concept_graph.py  concept_loading.py  concept_resolver.py  jsonld_support.py  oa_support.py  rdf_file_to_concepts_jsonld.py  sb_support.py  sparql_populate.py
spotterbase/convert/: anno_query_to_jsonld.py  document_to_json.py  normalize_selectors.py
spotterbase/corpora/: __init__.py  ar5iv.py  arxiv.py  arxiv_metadata_rdf_gen.py  arxmliv.py  arxmliv_metadata_rdf_gen.py  document_queries.py  interface.py  local_file_corpus.py  resolver.py  (+3 more)
(+195 files in other folders)
